--- a/src/SCAutomatedPlanning.Tests/SCAutomatedPlanning.Tests.csproj
+++ b/src/SCAutomatedPlanning.Tests/SCAutomatedPlanning.Tests.csproj
@@ -4,6 +4,21 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>SCAutomatedPlanning</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="FlUnit" Version="1.1.2" />
+    <PackageReference Include="FlUnit.VS.TestAdapter" Version="1.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SCAutomatedPlanning.ExampleProblems\SCAutomatedPlanning.ExampleProblems.csproj" />
+    <ProjectReference Include="..\SCAutomatedPlanning\SCAutomatedPlanning.csproj" />
+  </ItemGroup>
 
 </Project>
