Rename to SCClassicalPlanning.

--- a/src/SCClassicalPlanning.Tests/SCClassicalPlanning.Tests.csproj
+++ b/src/SCClassicalPlanning.Tests/SCClassicalPlanning.Tests.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SCAutomatedPlanning.ExampleProblems\SCAutomatedPlanning.ExampleProblems.csproj" />
-    <ProjectReference Include="..\SCAutomatedPlanning\SCAutomatedPlanning.csproj" />
+    <ProjectReference Include="..\SCClassicalPlanning.ExampleProblems\SCClassicalPlanning.ExampleProblems.csproj" />
+    <ProjectReference Include="..\SCClassicalPlanning\SCClassicalPlanning.csproj" />
   </ItemGroup>
 
 </Project>
