--- a/src/SCClassicalPlanning.ExampleProblems/SCClassicalPlanning.ExampleProblems.csproj
+++ b/src/SCClassicalPlanning.ExampleProblems/SCClassicalPlanning.ExampleProblems.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SCAutomatedPlanning\SCAutomatedPlanning.csproj" />
+    <ProjectReference Include="..\SCClassicalPlanning\SCClassicalPlanning.csproj" />
   </ItemGroup>
 
 </Project>
