--- a/src/SCClassicalPlanning.Benchmarks/SCClassicalPlanning.Benchmarks.csproj
+++ b/src/SCClassicalPlanning.Benchmarks/SCClassicalPlanning.Benchmarks.csproj
@@ -1,17 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Planning\GraphPlan\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="SCGraphTheory.Search" Version="2.3.2" />
+    <ProjectReference Include="..\SCClassicalPlanning.ExampleProblems\SCClassicalPlanning.ExampleDomains.csproj" />
+    <ProjectReference Include="..\SCClassicalPlanning\SCClassicalPlanning.csproj" />
   </ItemGroup>
 
 </Project>
