Lots more significant changes. Getting there..

--- a/src/SCClassicalPlanning/SCClassicalPlanning.csproj
+++ b/src/SCClassicalPlanning/SCClassicalPlanning.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="SCGraphTheory.Search" Version="2.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ProblemFormatting\" />
+  </ItemGroup>
+
 </Project>
