--- a/src/SCClassicalPlanning/SCClassicalPlanning.csproj
+++ b/src/SCClassicalPlanning/SCClassicalPlanning.csproj
@@ -20,6 +20,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="" />
+    <None Include="..\SCClassicalPlanning.png" Pack="true" PackagePath="\" />
+  </ItemGroup>
+    
+  <ItemGroup>
     <Folder Include="ProblemFormatting\" />
   </ItemGroup>
 
