--- a/src/SCClassicalPlanning/SCClassicalPlanning.csproj
+++ b/src/SCClassicalPlanning/SCClassicalPlanning.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,11 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="README.md" Pack="true" PackagePath="" />
+    <None Include="SCClassicalPlanning.md" Pack="true" PackagePath="README.md" />
     <None Include="..\SCClassicalPlanning.png" Pack="true" PackagePath="\" />
   </ItemGroup>
     
   <ItemGroup>
+    <Folder Include="StateStorage\" />
     <Folder Include="ProblemFormatting\" />
   </ItemGroup>
 
