--- a/src/SCClassicalPlanning.ExampleProblems/SCClassicalPlanning.ExampleDomains.csproj
+++ b/src/SCClassicalPlanning.ExampleProblems/SCClassicalPlanning.ExampleDomains.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="SCClassicalPlanning.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SCClassicalPlanning\SCClassicalPlanning.csproj" />
   </ItemGroup>
 
