--- a/src/SCClassicalPlanning/SCClassicalPlanning.csproj
+++ b/src/SCClassicalPlanning/SCClassicalPlanning.csproj
@@ -30,7 +30,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SCFirstOrderLogic" Version="2.1.3" />
+    <PackageReference Include="SCFirstOrderLogic" Version="3.0.0-pre.1" />
     <PackageReference Include="SCGraphTheory.Search" Version="2.5.0" />
   </ItemGroup>
 
