--- a/src/SCClassicalPlanning/SCClassicalPlanning.csproj
+++ b/src/SCClassicalPlanning/SCClassicalPlanning.csproj
@@ -17,11 +17,6 @@
   </PropertyGroup>
    
   <ItemGroup>
-    <None Include="SCClassicalPlanning.md" Pack="true" PackagePath="README.md" />
-    <None Include="..\SCClassicalPlanning.png" Pack="true" PackagePath="\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -32,6 +27,11 @@
     </PackageReference>
     <PackageReference Include="SCFirstOrderLogic" Version="3.0.0-pre.1" />
     <PackageReference Include="SCGraphTheory.Search" Version="2.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\SCClassicalPlanning.png" Pack="true" PackagePath="\" Link="_PackageContent\SCClassicalPlanning.png" />
+    <None Update="_PackageContent\SCClassicalPlanning.md" Pack="true" PackagePath="README.md" />
   </ItemGroup>
 
 </Project>
