Added tests for alternative backward search implementations. Added some initial benchmarks.

--- a/src/SCClassicalPlanning.Tests/SCClassicalPlanning.Tests.csproj
+++ b/src/SCClassicalPlanning.Tests/SCClassicalPlanning.Tests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SCClassicalPlanning.Alternatives\SCClassicalPlanning.Alternatives.csproj" />
     <ProjectReference Include="..\SCClassicalPlanning.ExampleProblems\SCClassicalPlanning.ExampleDomains.csproj" />
     <ProjectReference Include="..\SCClassicalPlanning\SCClassicalPlanning.csproj" />
   </ItemGroup>
