--- a/.github/workflows/DeployDocumentation.yml
+++ b/.github/workflows/DeployDocumentation.yml
@@ -22,7 +22,7 @@ jobs:
 
     # publishes Blazor project to the release folder
     - name: Publish .NET Core Project
-      run: dotnet publish src/SCFClassicalPlanning.Documentation/SCClassicalPlanning.Documentation.csproj -c Release -o release --nologo
+      run: dotnet publish src/SCClassicalPlanning.Documentation/SCClassicalPlanning.Documentation.csproj -c Release -o release --nologo
     
     # changes the base-tag in index.html from '/' to 'SCClassicalPlanning' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to SCClassicalPlanning
