--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ x86/
 [Aa][Rr][Mm]64/
 bld/
 [Bb]in/
+!/src/SCClassicalPlanning.Documentation/wwwroot/lib/google-code-prettify/bin
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
