Gah, corrected accidental dependency change check-in.

--- a/src/SCClassicalPlanning/SCClassicalPlanning.csproj
+++ b/src/SCClassicalPlanning/SCClassicalPlanning.csproj
@@ -25,7 +25,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SCFirstOrderLogic" Version="0.0.0-local.221113T2148" />
+    <PackageReference Include="SCFirstOrderLogic" Version="3.1.2" />
     <PackageReference Include="SCGraphTheory.Search" Version="3.0.0-pre.3" />
   </ItemGroup>
 
