* Updated package project url to point at docs website. * PlanningGraph.Level now includes a reference back to the Graph that it resides in - to allow for search nodes in GraphPlan to be a little smaller than would otherwise be. * Incrementally more implementation of GraphPlan.

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,7 +6,7 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/sdcondon/SCClassicalPlanning.git</RepositoryUrl>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <PackageProjectUrl>https://github.com/sdcondon/SCClassicalPlanning</PackageProjectUrl>
+    <PackageProjectUrl>https://sdcondon.net/SCClassicalPlanning/</PackageProjectUrl>
     <PackageReleaseNotes>See https://github.com/sdcondon/SCClassicalPlanning/releases.</PackageReleaseNotes>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <Copyright>2022 Simon Condon</Copyright>
