--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -14,7 +14,9 @@ jobs:
 
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: |
+          6.0.x
+          7.0.x
 
     - name: Run Tests
       working-directory: ./src
