--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -15,7 +15,9 @@ jobs:
     - name: Set up dotnet
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: |
+          6.0.x
+          7.0.x
 
     - name: Set up Nuget
       uses: nuget/setup-nuget@v1
