Several minor things:
* Docs and comments.
* Set indent size to 4 in editorconfig (since VS now apparently defaults to 2..).
* Updated copyright year in package metadata and license.
* Added github workflows to VS solution - for slightly more convenient access.

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -9,7 +9,7 @@
     <PackageProjectUrl>https://sdcondon.net/SCClassicalPlanning/</PackageProjectUrl>
     <PackageReleaseNotes>See https://github.com/sdcondon/SCClassicalPlanning/releases.</PackageReleaseNotes>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Copyright>2022 Simon Condon</Copyright>
+    <Copyright>2022-2023 Simon Condon</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
