--- a/src/SCClassicalPlanning.Tests/SCClassicalPlanning.Tests.csproj
+++ b/src/SCClassicalPlanning.Tests/SCClassicalPlanning.Tests.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SCClassicalPlanning.Alternatives\SCClassicalPlanning.Alternatives.csproj" />
-    <ProjectReference Include="..\SCClassicalPlanning.ExampleProblems\SCClassicalPlanning.ExampleDomains.csproj" />
+    <ProjectReference Include="..\SCClassicalPlanning.ExampleDomains\SCClassicalPlanning.ExampleDomains.csproj" />
     <ProjectReference Include="..\SCClassicalPlanning\SCClassicalPlanning.csproj" />
   </ItemGroup>
 
