Oops. Another project reference fix.

--- a/src/SCClassicalPlanning.Benchmarks/SCClassicalPlanning.Benchmarks.csproj
+++ b/src/SCClassicalPlanning.Benchmarks/SCClassicalPlanning.Benchmarks.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SCClassicalPlanning.Alternatives\SCClassicalPlanning.Alternatives.csproj" />
-    <ProjectReference Include="..\SCClassicalPlanning.ExampleProblems\SCClassicalPlanning.ExampleDomains.csproj" />
+    <ProjectReference Include="..\SCClassicalPlanning.ExampleDomains\SCClassicalPlanning.ExampleDomains.csproj" />
     <ProjectReference Include="..\SCClassicalPlanning\SCClassicalPlanning.csproj" />
   </ItemGroup>
 
