--- a/src/SCClassicalPlanning/SCClassicalPlanning.csproj
+++ b/src/SCClassicalPlanning/SCClassicalPlanning.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
 
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Description>Basic but fully functional and documented classical planning implementations. Somewhat influenced by "Artificial Intelligence: A Modern Approach" (Russell &amp; Norvig). Includes state- and goal-space search for now, GraphPlan will be added prior to v1.</Description>
+    <Description>Basic but fully functional and documented classical planning implementations. Somewhat influenced by "Artificial Intelligence: A Modern Approach" (Russell &amp; Norvig). Includes state- and goal-space search as well as a GraphPlan implementation.</Description>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageTags>classical planning ai state space search</PackageTags>
     <Product>SCClassicalPlanning</Product>
