--- a/src/SCClassicalPlanning.Documentation/SCClassicalPlanning.Documentation.csproj
+++ b/src/SCClassicalPlanning.Documentation/SCClassicalPlanning.Documentation.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SCClassicalPlanning.ExampleDomains\SCClassicalPlanning.ExampleDomains.csproj" />
+    <ProjectReference Include="..\SCClassicalPlanning\SCClassicalPlanning.csproj" />
+  </ItemGroup>
+
 </Project>
