Example domain 'AsText' additions - not working yet because I've not written the PDDL parser yet. Also some minor tweaks the to PDDL grammar file.

--- a/src/SCClassicalPlanning.ExampleDomains/SCClassicalPlanning.ExampleDomains.csproj
+++ b/src/SCClassicalPlanning.ExampleDomains/SCClassicalPlanning.ExampleDomains.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="AsText\BlocksWorld.pddl" />
+    <None Remove="AsText\BlocksWorld.Sussman.pddl" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="AsText\BlocksWorld.pddl" />
+    <EmbeddedResource Include="AsText\BlocksWorld.Sussman.pddl" />
+  </ItemGroup>
+
+  <ItemGroup>
     <InternalsVisibleTo Include="SCClassicalPlanning.Tests" />
   </ItemGroup>
 
