--- a/.github/workflows/onPushDocs.yml
+++ b/.github/workflows/onPushDocs.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'src/SCClassicalPlanning.Documentation/**'
+  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
