--- a/.github/workflows/PublishNuGetPackages.yml
+++ b/.github/workflows/PublishNuGetPackages.yml
@@ -15,9 +15,7 @@ jobs:
     - name: Set up dotnet
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: |
-          6.0.x
-          7.0.x
+        dotnet-version: '8.x'
 
     - name: Set up Nuget
       uses: nuget/setup-nuget@v1
