--- a/.github/workflows/ValidationBuild.yml
+++ b/.github/workflows/ValidationBuild.yml
@@ -14,9 +14,7 @@ jobs:
 
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: |
-          6.0.x
-          7.0.x
+        dotnet-version: '8.x'
 
     - name: Run Tests
       working-directory: ./src
