--- a/src/SCClassicalPlanning.Tests/SCClassicalPlanning.Tests.csproj
+++ b/src/SCClassicalPlanning.Tests/SCClassicalPlanning.Tests.csproj
@@ -9,8 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
-    <PackageReference Include="FlUnit" Version="1.3.0-pre.1" />
-    <PackageReference Include="FlUnit.VS.TestAdapter" Version="1.3.0-pre.1">
+    <PackageReference Include="FlUnit" Version="1.3.0" />
+    <PackageReference Include="FlUnit.VS.TestAdapter" Version="1.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
