--- a/src/SCClassicalPlanning/SCClassicalPlanning.csproj
+++ b/src/SCClassicalPlanning/SCClassicalPlanning.csproj
@@ -38,7 +38,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SCFirstOrderLogic" Version="5.5.0" />
+    <PackageReference Include="SCFirstOrderLogic" Version="6.0.0-pre.1" />
     <PackageReference Include="SCGraphTheory.Search" Version="4.0.0" />
   </ItemGroup>
 
