--- a/.github/workflows/PublishNuGetPackages.yml
+++ b/.github/workflows/PublishNuGetPackages.yml
@@ -5,15 +5,15 @@ on:
     types: [published]
 
 jobs:
-  build:
+  build-and-publish:
     runs-on: windows-latest
 
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@v4
 
     - name: Set up dotnet
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '8.x'
 
@@ -34,3 +34,22 @@ jobs:
     - name: Push packages
       run: nuget push "**/*.nupkg" -Source nuget.org
       working-directory: ./src
+
+    - name: Update 'latest-release' tag
+      uses: actions/github-script@v5
+      with:
+        script: |
+          github.rest.git.createRef({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            ref: 'refs/tags/latest-release',
+            sha: context.sha
+          }).catch(err => {
+            if (err.status !== 422) throw err;
+            github.rest.git.updateRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'tags/latest-release',
+              sha: context.sha
+            });
+          })
