docs site: added blazorise & respect system color mode preference

--- a/src/SCClassicalPlanning.Documentation/SCClassicalPlanning.Documentation.csproj
+++ b/src/SCClassicalPlanning.Documentation/SCClassicalPlanning.Documentation.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise.Bootstrap5" Version="1.7.5" />
+    <PackageReference Include="Blazorise.Icons.Bootstrap" Version="1.7.5" />
     <PackageReference Include="Markdig" Version="0.37.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.6" PrivateAssets="all" />
