--- a/src/SCClassicalPlanning.Benchmarks/SCClassicalPlanning.Benchmarks.csproj
+++ b/src/SCClassicalPlanning.Benchmarks/SCClassicalPlanning.Benchmarks.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+    <PackageReference Include="SCFirstOrderLogic.Inference.Basic" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
