--- a/src/SCClassicalPlanning.Documentation/SCClassicalPlanning.Documentation.csproj
+++ b/src/SCClassicalPlanning.Documentation/SCClassicalPlanning.Documentation.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.6" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
+    <PackageReference Include="SCFirstOrderLogic.Inference.Basic" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
