--- a/src/SCClassicalPlanning.Tests/SCClassicalPlanning.Tests.csproj
+++ b/src/SCClassicalPlanning.Tests/SCClassicalPlanning.Tests.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Include="SCFirstOrderLogic.Inference.Basic" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
